# fp

./: .gitignore  .hlint.yaml  README.md  fp-lab2.cabal  hs.cabal
.github/workflows/: ci.yml
app/: Main.hs  One.hs  Thirty.hs
src/Structure/: Internal.hs
tests/: Spec.hs  Test.hs  Tests.hs
