cabal-version: 3.0
name:          hs
version:       0.1.0.0

executable hs
    main-is:          Main.hs
    other-modules:    Thirty, One
    hs-source-dirs:   app
    build-depends: 
        base ^>=4.19.1.0
    default-language: Haskell2010

test-suite hs-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends: base, hs
  hs-source-dirs: tests
  default-language: Haskell2010