cabal-version: 3.0
name: hs
version: 0.1.0.3

library
  exposed-modules: Thirty, One
  build-depends: base ^>=4.19.0.0
  hs-source-dirs: app
  default-language: Haskell2010

executable hs
  main-is: Main.hs
  build-depends: base, hs
  other-modules:    One, Thirty
  hs-source-dirs: app
  default-language: Haskell2010

test-suite hs-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends: base, hspec, hs
  hs-source-dirs: tests
  default-language: Haskell2010